# portaudio-java

./: .gitignore  CMakeLists.txt  README.md  build.gradle  getCodeArtifactAuthToken.sh  gradle.properties  publishToLocal.sh
.circleci/: config.yml
src/main/java/com/portaudio/: FileUtils.java  HostParams.java  PortAudio.java  StreamParameters.java  WasapiParams.java
src/main/jni/: com_portaudio_PortAudio.c  jpa_tools.c  jpa_tools.h
